JumpScript/tests/baselines/reference/parserClassDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration8.jump(2,3): error TS2390: Constructor implementation is missing.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration8.jump (1 errors) ====
    class C {
      constructor();
      ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    }